# docs/swagger.json
@@ -13,7 +13,43 @@
     "host": "localhost:7001",
     "basePath": "/api/v1",
     "paths": {
-        "/event": {
+        "/deal-proposal-create-event-tracking": {
+            "post": {
+                "description": "event manual job api",
+                "consumes": [
+                    "application/json",
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json",
+                    "application/json"
+                ],
+                "tags": [
+                    "Inner|manual"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "from",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "to",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                }
+            }
+        },
+        "/deal-proposal-create-event-tracking-cron": {
             "post": {
                 "description": "event cron job api, call by dolphin scheduler",
                 "consumes": [
@@ -25,19 +61,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Inner"
-                ],
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "name": "maxHeight",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "minHeight",
-                        "in": "query"
-                    }
+                    "Inner|Cron"
                 ],
                 "responses": {
                     "200": {
